--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
     "prefix": "!",
-    "token": "MTE0ODIyMjY4MDMxMTUzMzU5OQ.Gnf4P7.Xh0hhz8h7mpRKuZhj_X3iIKfCfajm7SfxrMZcY"
+    "token": "",
+    "channelId": "",
+    "websiteURL": "",
+    "apiServerURL": "",
+    "testApiServerURL": ""
   }
   
